Make Elmo's Hand primary